version 2
gitignore changed